alterações e formulario de envio

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tux Transportadora</title>
+    <title>Ux Transportadora</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="./img/Tesmaster_Favicon-348x464.png" type="image/x-icon"/>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                         <a href="">Soluções Logísticas</a>
                     </li>
                     <li>
-                        <a href="">Envie sua encomenda</a>
+                        <a href="formulario.html">Envie sua encomenda</a>
                     </li>
                     <li>
                         <a href="">Login</a>
@@ -53,7 +54,7 @@
                 <section id="postagens">
 
                     <article id="video">
-                        <h3>Video: Conheça a transportadora</h3>
+                        <h3>Video: Conheça nossa empresa</h3>
                         <iframe width="310" height="170" src="https://www.youtube.com/watch?v=Ln78wg7A-yQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </article>
 
