--- a/formulario.html
+++ b/formulario.html
@@ -32,63 +32,49 @@
               <input type="text" name="sobrenome" id="sobrenome" required>
           </div>
       </fieldset> 
+    <fieldset class="grupo">
+        <!-- Campo de email com-->
+        <div class="campo">
+            <label for="email"><strong>Email</strong></label>
+            <input type="email" name="email" id="email" required>
+        </div>
 
-      <!-- Campo de email com-->
-      <div class="campo">
-          <label for="email"><strong>Email</strong></label>
-          <input type="email" name="email" id="email" required>
-      </div>
+        <div class="campo">
+            <label for="email"><strong>CPF/CNPJ</strong></label>
+            <input type="email" name="email" id="email" required>
+        </div>
+    </fieldset>
 
-      <!-- Campo de desenvolvimento web com 3 opções de botões selecionáveis (radio button) e css de classe "campo" -->
-      <div class="campo">
-          <label><strong>De qual lado da aplicação você desenvolve?</strong></label>
-          <label>
-              <input type="radio" name="devweb" value="frontend" checked>Front-end
-          </label>
-          <label>
-              <input type="radio" name="devweb" value="backend">Back-end
-          </label>
-          <label>
-              <input type="radio" name="devweb" value="fullstack">Fullstack
-          </label>
-      </div>
+    <fieldset class="grupo">
+        <!-- Campo de desenvolvimento web com 3 opções de botões selecionáveis (radio button) e css de classe "campo" -->
+        <div class="campo">
+            <label for="email"><strong>Endereço Remetente</strong></label>
+            <input type="text" name="endereco" id="endereco" required>
+        </div>
+        <div class="campo">
+            <label for="email"><strong>Endereço Destinatário</strong></label>
+            <input type="text" name="endereco" id="endereco" required>
+        </div>
+    </fieldset>
+    
+    <fieldset class="grupo">
+        <div class="campo">
+            <label for="email"><strong>Código do Produto</strong></label>
+            <input type="text" name="codigo" id="codigo" required>
+        </div>
 
-      <!-- Campo de senioridade com 3 opções para escolha (select option) e css de classe "campo" -->
-      <div class="campo">
-          <label for="senioridade"><strong>Senioridade</strong></label>
-          <select id="senioridade" required>
-            <option selected disabled value="">Selecione</option>
-            <option>Júnior</option>
-            <option>Pleno</option>
-            <option>Sênior</option>
-          </select>
-      </div>
+        <div class="campo">
+            <label for="email"><strong>Qtd de Produtos</strong></label>
+            <input type="number" name="qtd" id="qtd" required>
+        </div>
+    </fieldset>
 
-      <fieldset class="grupo">
-          <!-- Campo de tecnologias para escolha de 1 ou mais opções para marcar (checkbox) e css de classe "campo" -->
-          <div id="check">
-              <label><strong>Selecione as tecnologias que utiliza:</strong></label><br><br>
-              <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
-              <label for="tecnologia1"> HTML</label>
-              <input type="checkbox" id="tecnologia2" name="tecnologia2" value="CSS">
-              <label for="tecnologia2"> CSS</label>
-              <input type="checkbox" id="tecnologia3" name="tecnologia3" value="JavaScript">
-              <label for="tecnologia3"> JavaScript</label>
-              <input type="checkbox" id="tecnologia4" name="tecnologia4" value="PHP">
-              <label for="tecnologia4"> PHP</label>
-              <input type="checkbox" id="tecnologia5" name="tecnologia5" value="C#">
-              <label for="tecnologia5"> C#</label>
-              <input type="checkbox" id="tecnologia6" name="tecnologia6" value="Python">
-              <label for="tecnologia6"> Python</label>
-              <input type="checkbox" id="tecnologia7" name="tecnologia7" value="Java">
-              <label for="tecnologia7"> Java</label>
-          </div>
-      </fieldset>
+      
 
       <!-- Caixa de texto -->
       <div class="campo">
           <br>
-          <label for="experiencia"><strong>Conte um pouco mais da sua experiência: </strong></label>
+          <label for="experiencia"><strong>Descrição do produto:</strong></label>
           <textarea rows="6" style="width: 26em" id="experiencia" name="experiencia"></textarea>
       </div>
 
